--- a/style.css
+++ b/style.css
@@ -43,10 +43,7 @@ body {
 
 .slide img{
 width: 100%;
-height: 500px;
-
-
-}
+height: 500px;}
 .navigation-manual{
 position: absolute;
 width: 200px;
@@ -126,7 +123,8 @@ ul {
 
 /* Header Start */
 header {
-  height: 100vh;
+  height: auto;
+  padding: 30px 20px;
   background: url("./img2/steel-pipelines-cables-plant.jpg") center center/cover no-repeat;
   position: relative;
 }
@@ -194,7 +192,7 @@ header {
 }
 .dropdown_menu{
   display: none;
-  position: absolute;
+  position: unset;
   right: 2rem;
   top: 60px;
   height: 0;
@@ -203,10 +201,12 @@ header {
   backdrop-filter: blur(15px);
   border-radius: 10px;
   overflow: hidden;
+  padding: 10px 10px;
   transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .dropdown_menu.open{
-  height: 240px;
+  height:auto;
+  padding: 10px 20px;
 
 }
 .dropdown_menu li{
@@ -239,6 +239,7 @@ header {
   #dropdown_menu{
     left: 2rem;
     width: unset;
+  
 
   }
 
@@ -615,63 +616,181 @@ form button {
    
     justify-content: left;
   }
-  nav ul {
-    margin-right: 20px;
-  }
-
-  nav ul li a {
-    padding: 10px;
-  }
-
-  header .content h1 {
-    font-size: 28px;
-  }
-  #contact{
-    padding: 8rem 0 6rem;
-  }
   
-  #about {
-   height: auto;
-   padding: 4rem 2rem;
-  }
-  #about .about-content {
-    display: block;
-  
-  }
-  #about .about-content a {
-    margin-top: 2rem;
-  }
-  #about .about-content p {
-    margin-right: 8rem;
-  }
-  #about img {
-    max-width: 500px;
-  }
-  .slides{
-    
-    margin: 40px 200px auto;
-   
-    
-  }
-  .slide img{
-    width:450;
-    }
-    .navigation-manual{
-      width: 940px;
-    }
-  #offers .offers-items img {
-    width: 200px;
-    border-radius: 10px;
-  }
-  #menu .menu-items {
-    display: block;
-   
-  }
   #daytime .daytime-items img {
    
     height: 30vh;
      
   }
+  #navbar img{
+    margin-bottom: 20px;
+  }
+  #navbar{
+    height: auto;
+  }
+  #navbar .toggle_btn {
+    font-size: 2rem;
+  
+  }
+  .dropdown_menu.open{
+    height: auto;
+  
+  
+  }
+  
+  #navbar .logo a {
+    font-size: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  header .content{
+    height: auto;
+  }
+
+  header .content h1 {
+    font-size: 10px;
+   
+   
+  }
+  header .rem h1{
+    padding: 1px 30px;
+    font-size: 18px;
+  }
+  header .rem h2{
+    font-size: 15px;
+     padding: 1px 40px;
+  }
+  header .rem h3{
+    font-size: 15px;
+     padding: 1px 40px;
+  }
+  header .content p {
+   
+    margin: 20px 20px ;
+    font-size: 10px;
+  }
+  #about {
+    display: block;
+} 
+#about .about-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+#about .about-content p {
+margin-right: 0rem;
+line-height: 15px;
+font-size: 12px;
+width: 300px;
+
+
+}
+#about .about-content a {
+font-size: 12px;
+}
+#about h2 {
+  font-size: 18px;
+}
+#about img {
+  display: none;
+}
+.slider {
+  display: none;
+}
+#offers {
+  height: auto;
+  padding: 30px 10px;
+}
+#offers h2 {
+  font-size: 20px;
+}
+
+
+ #offers .offers-items{
+  flex-direction: column;
+ }
+ #menu .menu-items .menu-item {
+  margin: 20px 10px;
+ }
+ #daytime .daytime-items {
+  display: block;
+  height: auto;
+  padding: 30px 0px;
+ }
+ #daytime .daytime-items .daytime-item{
+   margin-top: 40px;
+ }
+ #daytime .daytime-items img {
+ 
+  height: 30vh;
+   
+}
+
+ #contact .contact-info {
+  width: 80%;
+}
+form {
+  width: 80%;
+}
+
+
+ #navbar .links,
+ #navbar .action_btn{
+   display: none;
+   
+ }
+ #navbar .toggle_btn{
+   display: block; 
+ margin-left: 50px;
+  }
+  .dropdown_menu{
+     display: block;
+   }
+   #menu .title h2 {
+   font-size: 20px;
+  }
+  #menu .title p {
+    font-size: 13px;
+  }
+  #menu .menu-items .menu-item img {
+    width: 300px;
+    padding: 0px 10px;
+  
+  }
+  #menu .btn {
+  font-size: 10px;
+  }
+  #gallery {
+    padding: 4rem 0 6rem;
+  }
+  #gallery h2 {
+    font-size: 20px;
+    
+  }
+  #contact .contact-info h3 {
+    font-size: 20px;
+   
+  }
+  #contact .contact-info p {
+  font-size: 10px;
+  }
+#contact .contact-info p a {
+  font-size: 10px;
+  }
+  
+#contact .contact-info a i {
+font-size: 20px;
+border-radius: 30%;
+}
+form {
+font-size: 10px;
+}
+form input{
+font-size: 10px;
+}
+
+  
   
   
   #contact .contact-content {
@@ -684,56 +803,85 @@ form button {
     #navbar{
       height: auto;
     }
+    #navbar .toggle_btn {
+      font-size: 2rem;
+    
+    }
+    .dropdown_menu.open{
+      height: auto;
+    
+    
+    }
+    
+    #navbar .logo a {
+      font-size: 20px;
+      align-items: center;
+      justify-content: center;
+    }
     
     header .content{
       height: 60%;
     }
 
     header .content h1 {
-      font-size: 18px;
+      font-size: 10px;
+      padding: 5px;
      
+    }
+    header .rem h1{
+      padding: 1px 35px;
+      font-size: 18px;
+    }
+    header .rem h2{
+      font-size: 15px;
+       padding: 1px 40px;
+    }
+    header .rem h3{
+      font-size: 15px;
+       padding: 1px 40px;
     }
     header .content p {
      
       margin: 20px 20px ;
-      font-size: 16px;
+      font-size: 10px;
     }
-    #about .about-content  {
-     flex-direction: column;
-     width: 5px;
+    #about {
+      display: block;
+  } 
+  #about .about-content {
+    display: flex;
+    justify-content: space-between;
   }
-  #about .about-content a {
-   margin: 2rem 0 ;
+  
+#about .about-content p {
+  margin-right: 0rem;
+  line-height: 15px;
+ font-size: 12px;
+ width: 300px;
+  
+ 
+}
+#about .about-content a {
+ font-size: 12px;
+}
+  #about h2 {
+    font-size: 18px;
   }
   #about img {
-    max-width: 380px;
+    display: none;
   }
-  #about {
-    height: auto;
-    padding: 4rem 2rem;
-   }
-   #about .about-content p {
-    width: 360px;
- font-size: 20px;
- 
- 
+  .slider {
+    display: none;
   }
-  #about h2 {
-   font-size: 30px;
-  }
-  .slides{
-    
-    margin: 40px -20px auto;
-   
-    
-  }
-  .navigation-manual{
-    width: 340px;
-  } 
   #offers {
     height: auto;
     padding: 30px 10px;
   }
+  #offers h2 {
+    font-size: 20px;
+  }
+  
+  
    #offers .offers-items{
     flex-direction: column;
    }
@@ -774,5 +922,52 @@ form button {
     .dropdown_menu{
        display: block;
      }
+     #menu .title h2 {
+     font-size: 20px;
+    }
+    #menu .title p {
+      font-size: 13px;
+    }
+    #menu .menu-items .menu-item img {
+      width: 300px;
+      padding: 0px 10px;
+    
+    }
+    #menu .btn {
+    font-size: 10px;
+    }
+    #gallery {
+      padding: 4rem 0 6rem;
+    }
+    #gallery h2 {
+      font-size: 20px;
+      
+    }
+    #contact .contact-info h3 {
+      font-size: 20px;
+     
+    }
+     
+    #contact .contact-info p {
+    font-size: 10px;
+    }
+    
+  #contact .contact-info p a {
+    font-size: 10px;
+    }
+    
+    
+#contact .contact-info a i {
+  font-size: 20px;
+  border-radius: 30%;
+}
+form {
+  font-size: 10px;
+}
+form input{
+  font-size: 10px;
+}
+
+    
 }
 }
