--- a/style.css
+++ b/style.css
@@ -46,23 +46,23 @@ width: 100%;
 height: 500px;}
 .navigation-manual{
 position: absolute;
-width: 200px;
-margin-top: -40px;
+width: 350px;
+margin-top: -80px;
 display: flex;
 justify-content: center;
 
 }
 
 .manual-btn{
-border: 2px solid #e7ff0a;
-padding: 5px;
-border-radius: 10px;
+border: 8px solid #e7ff0a;
+padding: 33px;
+border-radius: 83px;
 cursor: pointer;
 transition: 1s;  
 }
 
 .manual-btn:not(:last-child){
-margin-right: 40px;
+margin-right: 1px;
 
 }
 
@@ -254,17 +254,17 @@ justify-content: center;
 
 header .rem h1{
   color: #fff;
-  margin: -35px 0px 0px 70px;
+  margin: -35px 0px 0px 0px;
   font-size: 20px;
 }
 header .rem h2{
   color: #fff;
-  margin: 0px 0px 0px 30px;
+  margin: 0px 0px 0px 0px;
   font-size: 20px;
 }
 header .rem h3{
   color: #fff;
-  margin: 0px 0px 0px 18px;
+  margin: 0px 0px 0px px;
   font-size: 20px;
 }
 
@@ -363,7 +363,7 @@ header * {
 
 #about .about-content p {
   margin-right: 1rem;
-  line-height: 20px;
+  line-height: 40px;
   color: #9a9a9a;
   font-weight: 1000;
   
@@ -378,41 +378,7 @@ header * {
 }
 /* About End */
 /* Offers Section start */
-#offers {
- 
-  background: url("./img/offer-background.jpg") center center/cover fixed;
-  padding: 4rem 0 4rem;
-}
 
-#offers h2 {
-  font-size: 40px;
-  color: #e4b95b;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-
-#offers .offers-video {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
- 
-#offers .offers-video video {
-  margin: 20px;
-  width: 280px;
-  height: 200px;
-  border-radius: 15px;
-  opacity: 0.8;
-  
-
-}
-#offers .offers-video video:hover  {
-  opacity: 1;
-  
-
-}
 
 
 
@@ -649,29 +615,29 @@ form button {
   }
 
   header .content h1 {
-    font-size: 10px;
+    font-size: 13px;
    
    
   }
   header .rem h1{
-    padding: 1px 30px;
+    padding: 1px 0px;
     font-size: 18px;
   }
   header .rem h2{
-    font-size: 15px;
+    font-size: 17px;
      padding: 1px 40px;
   }
   header .rem h3{
-    font-size: 15px;
-     padding: 1px 40px;
+    font-size: 17px;
+     padding: 1px 0px;
   }
   header .content p {
    
     margin: 20px 20px ;
-    font-size: 10px;
+    font-size: 15px;
   }
   #about {
-    display: block;
+    display: flex;
 } 
 #about .about-content {
   display: flex;
@@ -681,8 +647,8 @@ form button {
 #about .about-content p {
 margin-right: 0rem;
 line-height: 15px;
-font-size: 12px;
-width: 300px;
+font-size: 14px;
+
 
 
 }
@@ -698,18 +664,15 @@ font-size: 12px;
 .slider {
   display: none;
 }
-#offers {
-  height: auto;
-  padding: 30px 10px;
-}
-#offers h2 {
-  font-size: 20px;
+.navigation-manual {
+  position: absolute;
+  width: 350px;
+  margin-top: 412px;
+  display: flex
+;
+  justify-content: center;
 }
 
-
- #offers .offers-items{
-  flex-direction: column;
- }
  #menu .menu-items .menu-item {
   margin: 20px 10px;
  }
@@ -764,7 +727,7 @@ form {
   }
   
   #menu .btn {
-  font-size: 10px;
+  font-size: 13px;
   }
   #gallery {
     padding: 4rem 0 6rem;
@@ -778,10 +741,10 @@ form {
    
   }
   #contact .contact-info p {
-  font-size: 10px;
+  font-size: 13px;
   }
 #contact .contact-info p a {
-  font-size: 10px;
+  font-size: 13px;
   }
   
 #contact .contact-info a i {
@@ -789,10 +752,10 @@ font-size: 20px;
 border-radius: 30%;
 }
 form {
-font-size: 10px;
+font-size: 13px;
 }
 form input{
-font-size: 10px;
+font-size: 13px;
 }
 
   
@@ -829,12 +792,12 @@ font-size: 10px;
     }
 
     header .content h1 {
-      font-size: 10px;
+      font-size: 14px;
       padding: 5px;
      
     }
     header .rem h1{
-      padding: 1px 35px;
+      padding: 1px 65px;
       font-size: 18px;
     }
     header .rem h2{
@@ -843,12 +806,12 @@ font-size: 10px;
     }
     header .rem h3{
       font-size: 15px;
-       padding: 1px 40px;
+       padding: 1px 18px;
     }
     header .content p {
      
       margin: 20px 20px ;
-      font-size: 10px;
+      font-size: 14px;
     }
     #about {
       display: block;
@@ -861,13 +824,13 @@ font-size: 10px;
 #about .about-content p {
   margin-right: 0rem;
   line-height: 15px;
- font-size: 12px;
- width: 300px;
+ font-size: 14px;
+ 
   
  
 }
 #about .about-content a {
- font-size: 12px;
+ font-size: 14px;
 }
   #about h2 {
     font-size: 18px;
@@ -878,18 +841,7 @@ font-size: 10px;
   .slider {
     display: none;
   }
-  #offers {
-    height: auto;
-    padding: 30px 10px;
-  }
-  #offers h2 {
-    font-size: 20px;
-  }
   
-  
-   #offers .offers-items{
-    flex-direction: column;
-   }
    #menu .menu-items .menu-item {
     margin: 20px 10px;
    }
@@ -931,7 +883,7 @@ font-size: 10px;
      font-size: 20px;
     }
     #menu .title p {
-      font-size: 13px;
+      font-size: 15px;
     }
     #menu .menu-items .menu-item img {
       width: 300px;
@@ -939,7 +891,7 @@ font-size: 10px;
     
     }
     #menu .btn {
-    font-size: 10px;
+    font-size: 13px;
     }
     #gallery {
       padding: 4rem 0 6rem;
@@ -954,11 +906,11 @@ font-size: 10px;
     }
      
     #contact .contact-info p {
-    font-size: 10px;
+    font-size: 15px;
     }
     
   #contact .contact-info p a {
-    font-size: 10px;
+    font-size: 15px;
     }
     
     
@@ -967,10 +919,10 @@ font-size: 10px;
   border-radius: 30%;
 }
 form {
-  font-size: 10px;
+  font-size: 13px;
 }
 form input{
-  font-size: 10px;
+  font-size: 13px;
 }
 
     
